# redash

./: Cargo.toml  LICENSE  README.md
docs/: notes.md  ui-loop.excalidraw
redash-client/: Cargo.toml
redash-client/src/: client.rs  errors.rs  lib.rs  main.rs
redash-client/src/client/: errors.rs  parser.rs
redash-tui/: Cargo.toml
redash-tui/src/: app.rs  constants.rs  main.rs  tui.rs
redash-tui/src/tui/: events.rs  input_box.rs  renderer.rs  selectable_list.rs  system_bar.rs
