[package]
name = "redash-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redash-client = { path = "../redash-client" }
pancurses = "0.17"
clap = { version = "4.0.32", features = ["derive"] }
box_drawing = "0.1.2"
